# weatherapp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  icons.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  refs.md  resource.qrc  weatherapp.qrc
helpers/: get_icons.py
include/: apichecker.h  geocoding.h  mainwindow.h  mainwindow.ui  weatherfetching.h
src/: apichecker.cpp  geocoding.cpp  mainwindow.cpp  weatherfetching.cpp
